[gd_scene load_steps=11 format=1]

[ext_resource path="res://game/game.gd" type="Script" id=1]
[ext_resource path="res://game/c-bg-clouds.png" type="Texture" id=2]
[ext_resource path="res://game/c-bg-fortress.png" type="Texture" id=3]
[ext_resource path="res://catopult/ctp.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/msg.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/text-success.png" type="Texture" id=6]
[ext_resource path="res://game/text-fail.png" type="Texture" id=7]
[ext_resource path="res://theme/main.tres" type="Theme" id=8]
[ext_resource path="res://game/text-pause.png" type="Texture" id=9]
[ext_resource path="res://pause.gd" type="Script" id=10]

[node name="game" type="Node"]

script/script = ExtResource( 1 )

[node name="game_field" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="game_field"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = true

[node name="ParallaxLayer 2" type="ParallaxLayer" parent="game_field/ParallaxBackground"]

motion/scale = Vector2( 0.1, 0 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="game_field/ParallaxBackground/ParallaxLayer 2"]

transform/pos = Vector2( -1000, 0 )
texture = ExtResource( 2 )
centered = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="game_field/ParallaxBackground"]

motion/scale = Vector2( 0.2, 0 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="game_field/ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( -1000, 0 )
texture = ExtResource( 3 )
centered = false

[node name="ctp" parent="game_field" instance=ExtResource( 4 )]

transform/pos = Vector2( 216.805, 939.22 )

[node name="cam" type="Camera2D" parent="game_field"]

transform/pos = Vector2( 960, 540 )
anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="ui" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 5.0
margin/right = 88.0
margin/bottom = 614.0
scroll/horizontal = true
scroll/vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="ui/ScrollContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="msg" parent="ui" instance=ExtResource( 5 )]

[node name="cm" type="CanvasModulate" parent="."]

visibility/visible = false
color = Color( 0.566406, 0.566406, 0.566406, 1 )

[node name="finish_ui" type="CanvasLayer" parent="."]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="cont" type="CenterContainer" parent="finish_ui"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 773.0
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="finish_ui/cont"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 785.0
margin/top = 365.0
margin/right = 1134.0
margin/bottom = 408.0
alignment = 0

[node name="success" type="TextureFrame" parent="finish_ui/cont/VBoxContainer"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 797.0
margin/bottom = 294.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="lose" type="TextureFrame" parent="finish_ui/cont/VBoxContainer"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 797.0
margin/bottom = 294.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="finish_ui/cont/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 349.0
margin/bottom = 43.0
alignment = 1

[node name="exit" type="Button" parent="finish_ui/cont/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 0.0
margin/top = 0.0
margin/right = 80.0
margin/bottom = 43.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="replay" type="Button" parent="finish_ui/cont/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 84.0
margin/top = 0.0
margin/right = 194.0
margin/bottom = 43.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Replay"
flat = false

[node name="next level" type="Button" parent="finish_ui/cont/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 198.0
margin/top = 0.0
margin/right = 349.0
margin/bottom = 43.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Next Level"
flat = false

[node name="pause_ui" type="CanvasLayer" parent="."]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="cont" type="CenterContainer" parent="pause_ui"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 822.0
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="pause_ui/cont"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 561.0
margin/top = 193.0
margin/right = 1358.0
margin/bottom = 628.0
alignment = 0

[node name="TextureFrame" type="TextureFrame" parent="pause_ui/cont/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 797.0
margin/bottom = 294.0
texture = ExtResource( 9 )
stretch_mode = 0

[node name="pause_continue" type="Button" parent="pause_ui/cont/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 0.0
margin/top = 298.0
margin/right = 797.0
margin/bottom = 341.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "continue"
flat = false

[node name="pause_replay" type="Button" parent="pause_ui/cont/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 0.0
margin/top = 345.0
margin/right = 797.0
margin/bottom = 388.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "replay"
flat = false

[node name="pause_exit" type="Button" parent="pause_ui/cont/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 0.0
margin/top = 392.0
margin/right = 797.0
margin/bottom = 435.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "exit"
flat = false

[node name="pause_listener" type="Control" parent="."]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 10 )

[connection signal="pressed" from="finish_ui/cont/VBoxContainer/HBoxContainer/exit" to="." method="_on_exit_pressed"]

[connection signal="pressed" from="finish_ui/cont/VBoxContainer/HBoxContainer/replay" to="." method="_on_replay_pressed"]

[connection signal="pressed" from="finish_ui/cont/VBoxContainer/HBoxContainer/next level" to="." method="_on_next_level_pressed"]

[connection signal="pressed" from="pause_ui/cont/VBoxContainer/pause_continue" to="." method="_on_pause_continue_pressed"]

[connection signal="pressed" from="pause_ui/cont/VBoxContainer/pause_replay" to="." method="_on_pause_replay_pressed"]

[connection signal="pressed" from="pause_ui/cont/VBoxContainer/pause_exit" to="." method="_on_pause_exit_pressed"]


